<resources>
    <string name="app_name">halo-mobile</string>

    <string name="dashboard">Dashboard</string>
    <string name="posts_list">Posts</string>
    <string name="add">Add</string>
    <string name="content_desc_add_post">Add a new post</string>
    <string name="title">Title</string>
    <string name="hint_post_content">Write something down…</string>
    <string name="content_desc_post_publish">Publish this article</string>
    <string name="operation_in_progress">Operation in Progress…</string>
    <string name="site_address">Site Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="input_title_here">Input title here</string>
    <string name="assets">Assets</string>
    <string name="upload_attachment">Upload attachment</string>
    <string name="comments">Comments</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="comment_author_avatar">Comment author\'s avatar</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="comment_to">Comment to:</string>
    <string name="show_comments">Show Comments</string>
    <string name="insert_attachment">Insert Attachment</string>
    <string name="theme_activated">Theme activated</string>
    <string name="halo_theme_thumbnail">Halo theme thumbnail</string>
    <string name="theme">Theme</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="tags">Tags</string>
    <string name="categories">Categories</string>
    <string name="post_thumbnail">Post thumbnail</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_tag">Edit tag</string>
    <string name="slug">Slug</string>
    <string name="name">Name</string>
    <string name="no_comments">There are no comments right now.</string>
    <string name="no_comments_icon_hint">Currently no comments</string>
    <string name="editing">Editing</string>
    <string name="post_edit_title_hint">Name a title</string>
    <string name="summary">Summary</string>
    <string name="publish">Publish</string>
    <string name="save_draft">Save Draft</string>
    <string name="network_error">Network Error</string>
    <string name="some_error">Some ERROR occurred</string>
    <string name="blog_settings">Blog Settings</string>
    <string name="custom_pages">Custom Pages</string>
    <string name="settings_general">General</string>
    <string name="journal_content">Journal content</string>
    <string name="private_">Private</string>

</resources>