<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.posts.post.edit.PostEditingFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleEditLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:hint="@string/post_edit_title_hint"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:inputType="text|textMultiLine"
                    android:paddingHorizontal="@dimen/screen_edge_interval" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contentEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                android:autofillHints="@null"
                android:background="@null"
                android:clipToPadding="false"
                android:gravity="top"
                android:hint="@string/hint_post_content"
                android:inputType="text|textMultiLine"
                android:nestedScrollingEnabled="true"
                android:paddingHorizontal="@dimen/screen_edge_interval"
                android:paddingBottom="@dimen/writing_content_padding_bottom"
                app:layout_constraintTop_toBottomOf="@id/titleEditLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="end"
        app:hideOnScroll="true"
        app:menu="@menu/menu_edit_post" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/publishFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_post_publish"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_anchor="@id/bottomBar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>