<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.DashboardFragment">

    <data>

        <variable
            name="profile"
            type="me.ikvarxt.halo.entites.UserProfile" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/app_bar_margin"
        android:layout_marginBottom="@dimen/bottom_nav_view_margin"
        app:fitsSystemWindowsInsets="top|bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="@dimen/screen_edge_interval">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarImage"
                error="@{@drawable/ic_baseline_error_24}"
                imageUrl="@{profile.avatarUrl}"
                android:layout_width="@dimen/dashboard_avatar_size"
                android:layout_height="@dimen/dashboard_avatar_size"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircleImageShape" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_gap"
                android:text="@{profile.nickname}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/avatarImage"
                app:layout_constraintTop_toTopOf="@id/avatarImage"
                tools:text="Halo" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@{profile.email}"
                app:layout_constraintBottom_toBottomOf="@id/avatarImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/nickname"
                app:layout_constraintTop_toBottomOf="@id/nickname"
                tools:text="test_contect_us@halo.run" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_gap"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{profile.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:text="I am me, beautiful me." />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/themeSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_gap"
                android:padding="@dimen/small_gap"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/haloSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_gap"
                android:padding="@dimen/small_gap"
                android:text="@string/blog_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintTop_toBottomOf="@id/themeSetting" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_gap"
                android:text="@string/log_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/haloSetting" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
